--- a/mu-template/trunk/after/template/vim/internals/vim-rc-global-ccpp.template
+++ b/mu-template/trunk/after/template/vim/internals/vim-rc-global-ccpp.template
@@ -2,4 +2,5 @@ VimL:" $Id$
 VimL:" vim-rc-global C/C++ projects File Template, Luc Hermitte <hermitte {at} free {dot} fr>, 12th Dec 2014
 
 " Alternate configuration {{{2
+" .h and .cpp are in the same directory
 let g:alternateSearchPath = 'sfr:.'
