--- a/mu-template/trunk/after/template/vim/internals/vim-rc-local-cmake.template
+++ b/mu-template/trunk/after/template/vim/internals/vim-rc-local-cmake.template
@@ -1,7 +1,7 @@
 VimL:" $Id$
 VimL:" vim-rc-local CMake File Template, Luc Hermitte <hermitte {at} free {dot} fr>, 12th Dec 2014
 
-" Project config {{{2
+" ======================[ Project config {{{2
 if ! (exists("g:loaded_¡s:fn¡")
       \ && (g:loaded__vimrc_local >= s:k_version)
       \ && !exists('g:force_reload_¡s:fn¡'))
