- lh-dev: AddStyle extended; lh-cpp and mu-template moved to AddStyle API

--- a/cpp/trunk/after/template/cpp/catch.template
+++ b/cpp/trunk/after/template/cpp/catch.template
@@ -6,6 +6,6 @@ VimL: let s:value_end    = '¡'
 VimL: let s:reindent     = 1 
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
-catch¡C_nl_before_bracket()¡(<+...+>)¡C_nl_before_curlyB()¡{
+catch(<+...+>){
     ¡s:Surround(1, '<+catch-code+>')¡
 }<++>
