--- a/mu-template/trunk/after/template/c/internals/c-header.template
+++ b/mu-template/trunk/after/template/c/internals/c-header.template
@@ -3,9 +3,10 @@ VimL: "C/C++ Header File-Template, Luc Hermitte
 VimL: let s:filename = s:path_from_root(expand('%:p'))
 VimL: call s:Include('c-file-header', 'c/internals')
 VimL: call s:Include('c-header-guard', 'c/internals')
+VimL: call s:StartIndentingHere()
 #ifndef <+¡s:guard¡+>
 #define <+¡s:guard¡+>
 
-VimL: call s:Include('c-header-content', 'c/internals', Marker_Txt("Definitions here"))
+VimL: call s:Include('c-header-content', 'c/internals', lh#marker#txt("Definitions here"))
 
 #endif // <+¡s:guard¡+>
